Fix authentication and request handling in SpamController
- Improved authentication handling by using SecurityContextHolder to access user context
- Added robust request validation to handle malformed JSON inputs
- Fixed content type validation to properly handle string vs object inputs
- Enhanced error logging for better debugging of authentication and request issues
- Resolved issue where prediction response was incorrectly processed as a subsequent request